CKsFinBot/k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finbot-frontend
  namespace: finbot
  labels:
    app: finbot-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: finbot-frontend

  template:
    metadata:
      labels:
        app: finbot-frontend

    spec:
      containers:
        - name: frontend
          image: nevilanghan/cksfinbot-frontend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
