CKsFinBot/k8s/python-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-backend
  namespace: finbot
  labels:
    app: python-backend

spec:
  replicas: 1
  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: python-backend

  template:
    metadata:
      labels:
        app: python-backend

    spec:
      containers:
        - name: python-backend
          image: nevilanghan/cksfinbot-python-backend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "250m"
              memory: "1Gi"
            limits:
              cpu: "500m"
              memory: "2Gi"

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 15

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
