CKsFinBot/k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: finbot-frontend
  namespace: finbot

spec:
  selector:
    app: finbot-frontend

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP

  type: ClusterIP
