CKsFinBot/k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: finbot
  labels:
    app: mongo

spec:
  clusterIP: None
  selector:
    app: mongo

  ports:
    - port: 27017
      name: mongo
