CKsFinBot/k8s/python-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-backend
  namespace: finbot
  labels:
    app: python-backend

spec:
  type: ClusterIP

  selector:
    app: python-backend

  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
